--- a/src/main/resources/templates/auth/sign-in.html
+++ b/src/main/resources/templates/auth/sign-in.html
@@ -26,12 +26,14 @@
 
         <div class="mb-3">
             <label for="username" class="form-label" th:text="#{username.label}">Username</label>
-            <input type="text" id="username" name="username" class="form-control" placeholder="Enter username" required/>
+            <input type="text" id="username" name="username" class="form-control" placeholder="Enter username"
+                   required/>
         </div>
 
         <div class="mb-3">
             <label for="password" class="form-label" th:text="#{password.label}">Password</label>
-            <input type="password" id="password" name="password" class="form-control" placeholder="Enter password" required/>
+            <input type="password" id="password" name="password" class="form-control" placeholder="Enter password"
+                   required/>
         </div>
 
         <button type="submit" class="btn-submit" th:text="#{button.submit}">Submit</button>
