--- a/src/main/resources/templates/auth/sign-up.html
+++ b/src/main/resources/templates/auth/sign-up.html
@@ -19,7 +19,10 @@
 <div class="auth-container">
     <h2 class="text-center mb-4" th:text="#{sign.up.header}">Register</h2>
     <form th:action="@{/auth/sign-up}" th:object="${signUpRequest}" method="post">
-        <input type="hidden" th:name="${_csrf.parameterName}" th:value="${_csrf.token}"/>
+        <input type="hidden"
+               th:if="${_csrf != null}"
+               th:name="${_csrf.parameterName}"
+               th:value="${_csrf.token}"/>
 
         <div class="mb-3">
             <label for="username" class="form-label" th:text="#{username.label}">Username</label>
