--- a/src/main/resources/templates/manager.html
+++ b/src/main/resources/templates/manager.html
@@ -135,12 +135,15 @@
                     <td>
                         <form th:action="@{'/manager/vouchers/' + ${voucher.id} + '/hot'}" method="post">
                             <input type="hidden" name="lang" th:value="${#locale.language}"/>
-                            <input type="hidden" th:name="${_csrf.parameterName}" th:value="${_csrf.token}"/>
+                            <input type="hidden"
+                                   th:if="${_csrf != null}"
+                                   th:name="${_csrf.parameterName}"
+                                   th:value="${_csrf.token}"/>
                             <input type="hidden" name="hot" th:value="${!voucher.hot}"/>
                             <button type="submit"
                                     th:classappend="${voucher.hot}
-                                  ? 'btn btn-danger btn-sm'
-                                  : 'btn btn-outline-danger btn-sm'"
+                                      ? 'btn btn-danger btn-sm'
+                                      : 'btn btn-outline-danger btn-sm'"
                                     th:text="${voucher.hot}
                            ? #{button.unsetHot}
                            : #{button.setHot}">
@@ -154,7 +157,10 @@
                               method="post"
                               class="d-flex gap-2 justify-content-center align-items-center">
                             <input type="hidden" name="lang" th:value="${#locale.language}"/>
-                            <input type="hidden" th:name="${_csrf.parameterName}" th:value="${_csrf.token}"/>
+                            <input type="hidden"
+                                   th:if="${_csrf != null}"
+                                   th:name="${_csrf.parameterName}"
+                                   th:value="${_csrf.token}"/>
 
                             <select name="status" class="form-select form-select-sm">
                                 <option th:each="st : ${allStatuses}"
